# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("./signature/enableNotificationDialog.gni")

ohos_hap("enable_notification_dialog_hap") {
  hap_profile = "entry/src/main/module.json"

  deps = [
    ":enable_notification_dialog_js_assets",
    ":enable_notification_dialog_resources",
  ]
  publicity_file = "publicity.xml"

  certificate_profile = "signature/openharmony_sx.p7b"
  hap_name = "enable_notification_dialog"
  subsystem_name = "notification"
  part_name = "distributed_notification_service"
  module_install_dir = "app/com.ohos.notificationdialog"
  if (defined(sign_hap_py_path)) {
    certificate_profile = "${certificate_profile_path}"
    key_alias = "HOS NotificationDialog Release"
    private_key_path = "HOS NotificationDialog Release"
    compatible_version = "9"
  }
}

ohos_js_assets("enable_notification_dialog_js_assets") {
  ets2abc = true
  source_dir = "entry/src/main/ets"
}

ohos_app_scope("enable_notification_dialog_app_profile") {
  app_profile = "AppScope/app.json"
  sources = [ "AppScope/resources" ]
}

ohos_resources("enable_notification_dialog_resources") {
  sources = [ "entry/src/main/resources" ]
  deps = [ ":enable_notification_dialog_app_profile" ]
  hap_profile = "entry/src/main/module.json"
}

group("dialog_hap") {
  deps = [ ":enable_notification_dialog_hap" ]
}
