# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/distributed_notification_service/notification.gni")
import("//build/test.gni")

module_output_path =
    "${component_name}/distributed_notification_service/benchmarktest"

ohos_benchmarktest("Benchmark_Notification_Servece_Test") {
  module_out_path = module_output_path
  include_dirs = [
    "include",
    "mock/include",
    "${services_path}/ans/include",
  ]

  sources = [
    "mock/mock_bundle_manager_helper.cpp",
    "mock/mock_ipc.cpp",
    "notification_service_test.cpp",
  ]

  deps = [
    "${frameworks_module_ans_path}:ans_innerkits",
    "${services_path}/ans:libans",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:wantagent_innerkits",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "ffrt:libffrt",
    "googletest:gtest_main",
    "hilog:libhilog",
    "image_framework:image_native",
    "kv_store:distributeddata_inner",
    "relational_store:native_rdb",
    "selinux_adapter:librestorecon",
  ]

  subsystem_name = "${subsystem_name}"
  part_name = "${component_name}"
}

group("benchmarktest") {
  testonly = true
  deps = []

  deps += [
    ":Benchmark_Notification_Servece_Test",
  ]
}
