# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/distributed_notification_service/notification.gni")

group("fuzztest") {
  testonly = true

  deps = [
    "servicepublish_fuzzer:ServicePublishFuzzTest",
    "servicesetdistributedenabledbybundle_fuzzer:ServiceSetDistributedEnabledByBundleFuzzTest",
    "servicesetbadgenumberfordhbybundle_fuzzer:ServiceSetBadgeNumberForDhByBundleFuzzTest",
    "servicesetslotflagsasbundle_fuzzer:ServiceSetSlotFlagsAsBundleFuzzTest",
    "servicepublishnotificationforindirectproxy_fuzzer:ServicePublishNotificationForIndirectProxyFuzzTest",
    "servicegetsyncnotificationenabledwithoutapp_fuzzer:ServiceGetSyncNotificationEnabledWithoutAppFuzzTest",
    "servicesubscribe_fuzzer:ServiceSubscribeFuzzTest",
    "servicegetnotificationrequestbyhashcode_fuzzer:ServiceGetNotificationRequestByHashCodeFuzzTest",
    "serviceregisterpushcallback_fuzzer:ServiceRegisterPushCallbackFuzzTest",
    "serviceremovenotification_fuzzer:ServiceRemoveNotificationFuzzTest",
    "servicegetslotsbybundle_fuzzer:ServiceGetSlotsByBundleFuzzTest",
    "servicepublishasbundle_fuzzer:ServicePublishAsBundleFuzzTest",
    "servicecancelall_fuzzer:ServiceCancelAllFuzzTest",
    "serviceisdistributedenabledbybundle_fuzzer:ServiceIsDistributedEnabledByBundleFuzzTest",
    "servicegetshowbadgeenabledforbundle_fuzzer:ServiceGetShowBadgeEnabledForBundleFuzzTest",
    "servicedistributeoperation_fuzzer:ServiceDistributeOperationFuzzTest",
    "servicedeleteallbyuser_fuzzer:ServiceDeleteAllByUserFuzzTest",
    "serviceenabledistributedbybundle_fuzzer:ServiceEnableDistributedByBundleFuzzTest",
    "servicesubscribelocalliveview_fuzzer:ServiceSubscribeLocalLiveViewFuzzTest",
    "serviceremovegroupbybundle_fuzzer:ServiceRemoveGroupByBundleFuzzTest",
    "serviceadddonotdisturbprofiles_fuzzer:ServiceAddDoNotDisturbProfilesFuzzTest",
    "serviceisdistributedenablebybundle_fuzzer:ServiceIsDistributedEnableByBundleFuzzTest",
    "serviceissmartreminderenabled_fuzzer:ServiceIsSmartReminderEnabledFuzzTest",
    "serviceremovenotifications_fuzzer:ServiceRemoveNotificationsFuzzTest",
    "serviceissupporttemplate_fuzzer:ServiceIsSupportTemplateFuzzTest",
    "servicecanpublishasbundle_fuzzer:ServiceCanPublishAsBundleFuzzTest",
    "serviceunsubscribe_fuzzer:ServiceUnsubscribeFuzzTest",
    "servicecancelgroup_fuzzer:ServiceCancelGroupFuzzTest",
    "servicesetsyncnotificationenabledwithoutapp_fuzzer:ServiceSetSyncNotificationEnabledWithoutAppFuzzTest",
    "servicepublishcontinuoustasknotification_fuzzer:ServicePublishContinuousTaskNotificationFuzzTest",
    "serviceupdateslots_fuzzer:ServiceUpdateSlotsFuzzTest",
    "servicegetslots_fuzzer:ServiceGetSlotsFuzzTest",
    "servicegetenabledforbundleslotself_fuzzer:ServiceGetEnabledForBundleSlotSelfFuzzTest",
    "servicesetnotificationbadgenum_fuzzer:ServiceSetNotificationBadgeNumFuzzTest",
    "serviceremoveallnotifications_fuzzer:ServiceRemoveAllNotificationsFuzzTest",
    "servicegetenabledforbundleslot_fuzzer:ServiceGetEnabledForBundleSlotFuzzTest",
    "servicesetbadgenumberbybundle_fuzzer:ServiceSetBadgeNumberByBundleFuzzTest",
    "servicesethashcoderule_fuzzer:ServiceSetHashCodeRuleFuzzTest",
    "serviceisneedsilentindonotdisturbmode_fuzzer:ServiceIsNeedSilentInDoNotDisturbModeFuzzTest",
    "servicegetalldistribuedenabledbundles_fuzzer:ServiceGetAllDistribuedEnabledBundlesFuzzTest",
    "servicesetnotificationsenabledforspecialbundle_fuzzer:ServiceSetNotificationsEnabledForSpecialBundleFuzzTest",
    "servicegetslotbybundle_fuzzer:ServiceGetSlotByBundleFuzzTest",
    "servicegetdonotdisturbprofile_fuzzer:ServiceGetDoNotDisturbProfileFuzzTest",
    "servicecancelasbundlewithagent_fuzzer:ServiceCancelAsBundleWithAgentFuzzTest",
    "servicesetsmartreminderenabled_fuzzer:ServiceSetSmartReminderEnabledFuzzTest",
    "serviceisspecialuserallowednotify_fuzzer:ServiceIsSpecialUserAllowedNotifyFuzzTest",
    "servicesetbadgenumber_fuzzer:ServiceSetBadgeNumberFuzzTest",
    "servicesetnotificationsenabledforbundle_fuzzer:ServiceSetNotificationsEnabledForBundleFuzzTest",
    "servicesetadditionconfig_fuzzer:ServiceSetAdditionConfigFuzzTest",
    "servicesetdonotdisturbdate_fuzzer:ServiceSetDoNotDisturbDateFuzzTest",
    "servicegetslotnumasbundle_fuzzer:ServiceGetSlotNumAsBundleFuzzTest",
    "serviceaddslots_fuzzer:ServiceAddSlotsFuzzTest",
    "servicegetspecialactivenotifications_fuzzer:ServiceGetSpecialActiveNotificationsFuzzTest",
    "servicegetallliveviewenabledbundles_fuzzer:ServiceGetAllLiveViewEnabledBundlesFuzzTest",
    "servicesetshowbadgeenabledforbundle_fuzzer:ServiceSetShowBadgeEnabledForBundleFuzzTest",
    "servicedisablenotificationfeature_fuzzer:ServiceDisableNotificationFeatureFuzzTest",
    "servicecancel_fuzzer:ServiceCancelFuzzTest",
    "servicereplydistributeoperation_fuzzer:ServiceReplyDistributeOperationFuzzTest",
    "servicegetdonotdisturbdate_fuzzer:ServiceGetDoNotDisturbDateFuzzTest",
    "servicesettargetdevicestatus_fuzzer:ServiceSetTargetDeviceStatusFuzzTest",
    "servicesetenabledforbundleslot_fuzzer:ServiceSetEnabledForBundleSlotFuzzTest",
    "serviceremovedonotdisturbprofiles_fuzzer:ServiceRemoveDoNotDisturbProfilesFuzzTest",
    "serviceshelldump_fuzzer:ServiceShellDumpFuzzTest",
    "servicegetbundleimportance_fuzzer:ServiceGetBundleImportanceFuzzTest",
    "servicegetactivenotifications_fuzzer:ServiceGetActiveNotificationsFuzzTest",
    "servicesetnotificationsenabledforallbundles_fuzzer:ServiceSetNotificationsEnabledForAllBundlesFuzzTest",
    "servicecanpopenablenotificationdialog_fuzzer:ServiceCanPopEnableNotificationDialogFuzzTest",
    "servicecancelcontinuoustasknotification_fuzzer:ServiceCancelContinuousTaskNotificationFuzzTest",
    "servicepublishwithmaxcapacity_fuzzer:ServicePublishWithMaxCapacityFuzzTest",
    "servicegetdeviceremindtype_fuzzer:ServiceGetDeviceRemindTypeFuzzTest",
    "servicedelete_fuzzer:ServiceDeleteFuzzTest",
    "servicesetdistributedenabledbyslot_fuzzer:ServiceSetDistributedEnabledBySlotFuzzTest",
    "servicesetnotificationsenabledbyuser_fuzzer:ServiceSetNotificationsEnabledByUserFuzzTest",
    "servicedeletebybundle_fuzzer:ServiceDeleteByBundleFuzzTest",
    "servicegetallnotificationsbyslottype_fuzzer:ServiceGetAllNotificationsBySlotTypeFuzzTest",
    "servicepublishasbundlewithmaxcapacity_fuzzer:ServicePublishAsBundleWithMaxCapacityFuzzTest",
    "servicegettargetdevicestatus_fuzzer:ServiceGetTargetDeviceStatusFuzzTest",
    "servicegetactivenotificationbyfilter_fuzzer:ServiceGetActiveNotificationByFilterFuzzTest",
    "servicegetslotbytype_fuzzer:ServiceGetSlotByTypeFuzzTest",
    "servicerequestenablenotification_fuzzer:ServiceRequestEnableNotificationFuzzTest",
    "servicegetslotflagsasbundle_fuzzer:ServiceGetSlotFlagsAsBundleFuzzTest",
    "servicetriggerlocalliveview_fuzzer:ServiceTriggerLocalLiveViewFuzzTest",
    "serviceallowusereminder_fuzzer:ServiceAllowUseReminderFuzzTest",
    "serviceisspecialbundleallowednotify_fuzzer:ServiceIsSpecialBundleAllowedNotifyFuzzTest",
    "serviceremoveslotbytype_fuzzer:ServiceRemoveSlotByTypeFuzzTest",
    "servicecancelasbundle_fuzzer:ServiceCancelAsBundleFuzzTest",
    "serviceaddslotbytype_fuzzer:ServiceAddSlotByTypeFuzzTest",
    "serviceupdatenotificationtimerbyuid_fuzzer:ServiceUpdateNotificationTimerByUidFuzzTest",
    "serviceisdistributedenabledbyslot_fuzzer:ServiceIsDistributedEnabledBySlotFuzzTest",
    "serviceremovedistributednotifications_fuzzer:ServiceRemoveDistributedNotificationsFuzzTest",
  ]
}