# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/notification/distributed_notification_service/notification.gni")

group("fuzztest") {
  testonly = true

  deps = [
    "servicepublish_fuzzer:ServicePublishFuzzTest",
    "servicesetdistributedenabledbybundle_fuzzer:ServiceSetDistributedEnabledByBundleFuzzTest",
    "servicesetbadgenumberfordhbybundle_fuzzer:ServiceSetBadgeNumberForDhByBundleFuzzTest",
    "servicesetslotflagsasbundle_fuzzer:ServiceSetSlotFlagsAsBundleFuzzTest",
    "servicegetsyncnotificationenabledwithoutapp_fuzzer:ServiceGetSyncNotificationEnabledWithoutAppFuzzTest",
    "servicegetusergrantedstate_fuzzer:ServiceGetUserGrantedStateFuzzTest",
    "servicegetusergrantedenabledbundles_fuzzer:ServiceGetUserGrantedEnabledBundlesFuzzTest",
    "servicegetusergrantedenabledbundlesforself_fuzzer:ServiceGetUserGrantedEnabledBundlesForSelfFuzzTest",
    "servicesubscribe_fuzzer:ServiceSubscribeFuzzTest",
    "servicegetnotificationrequestbyhashcode_fuzzer:ServiceGetNotificationRequestByHashCodeFuzzTest",
    "servicegetringtoneinfobybundle_fuzzer:ServiceGetRingtoneInfoByBundleFuzzTest",
    "serviceregisterpushcallback_fuzzer:ServiceRegisterPushCallbackFuzzTest",
    "serviceremovenotification_fuzzer:ServiceRemoveNotificationFuzzTest",
    "servicepublishasbundle_fuzzer:ServicePublishAsBundleFuzzTest",
    "servicepublishdelayednotification_fuzzer:ServicePublishDelayedNotificationFuzzTest",
    "servicecancelall_fuzzer:ServiceCancelAllFuzzTest",
    "serviceisdistributedenabledbybundle_fuzzer:ServiceIsDistributedEnabledByBundleFuzzTest",
    "serviceisgeofenceenabled_fuzzer:ServiceIsgeofenceenabledFuzzTest",
    "servicegetshowbadgeenabledforbundle_fuzzer:ServiceGetShowBadgeEnabledForBundleFuzzTest",
    "servicedistributeoperation_fuzzer:ServiceDistributeOperationFuzzTest",
    "servicedeleteallbyuser_fuzzer:ServiceDeleteAllByUserFuzzTest",
    "serviceenabledistributedbybundle_fuzzer:ServiceEnableDistributedByBundleFuzzTest",
    "servicegeofencefunctions_fuzzer:ServiceGeofenceFunctionsFuzzTest",
    "servicesubscribelocalliveview_fuzzer:ServiceSubscribeLocalLiveViewFuzzTest",
    "serviceremovegroupbybundle_fuzzer:ServiceRemoveGroupByBundleFuzzTest",
    "serviceadddonotdisturbprofiles_fuzzer:ServiceAddDoNotDisturbProfilesFuzzTest",
    "servicesetusergrantedstate_fuzzer:ServiceSetUserGrantedStateFuzzTest",
    "serviceisdistributedenablebybundle_fuzzer:ServiceIsDistributedEnableByBundleFuzzTest",
    "serviceissmartreminderenabled_fuzzer:ServiceIsSmartReminderEnabledFuzzTest",
    "serviceremovenotifications_fuzzer:ServiceRemoveNotificationsFuzzTest",
    "serviceissupporttemplate_fuzzer:ServiceIsSupportTemplateFuzzTest",
    "servicenotificationextensionsubscribe_fuzzer:ServiceNotificationExtensionSubscribeFuzzTest",
    "servicenotificationextensionunsubscribe_fuzzer:ServiceNotificationExtensionUnsubscribeFuzzTest",
    "servicecanpublishasbundle_fuzzer:ServiceCanPublishAsBundleFuzzTest",
    "servicecleardelaynotification_fuzzer:ServiceClearDelayNotificationFuzzTest",
    "serviceunsubscribe_fuzzer:ServiceUnsubscribeFuzzTest",
    "servicesetsyncnotificationenabledwithoutapp_fuzzer:ServiceSetSyncNotificationEnabledWithoutAppFuzzTest",
    "serviceupdateslots_fuzzer:ServiceUpdateSlotsFuzzTest",
    "servicegetenabledforbundleslotself_fuzzer:ServiceGetEnabledForBundleSlotSelfFuzzTest",
    "servicegetenabledforbundleslot_fuzzer:ServiceGetEnabledForBundleSlotFuzzTest",
    "servicesethashcoderule_fuzzer:ServiceSetHashCodeRuleFuzzTest",
    "serviceisneedsilentindonotdisturbmode_fuzzer:ServiceIsNeedSilentInDoNotDisturbModeFuzzTest",
    "servicegetalldistribuedenabledbundles_fuzzer:ServiceGetAllDistribuedEnabledBundlesFuzzTest",
    "servicesetnotificationsenabledforspecialbundle_fuzzer:ServiceSetNotificationsEnabledForSpecialBundleFuzzTest",
    "servicegetslotbybundle_fuzzer:ServiceGetSlotByBundleFuzzTest",
    "servicegetdonotdisturbprofile_fuzzer:ServiceGetDoNotDisturbProfileFuzzTest",
    "servicecancelasbundlewithagent_fuzzer:ServiceCancelAsBundleWithAgentFuzzTest",
    "servicesetsmartreminderenabled_fuzzer:ServiceSetSmartReminderEnabledFuzzTest",
    "servicesetbadgenumber_fuzzer:ServiceSetBadgeNumberFuzzTest",
    "servicegetspecialactivenotifications_fuzzer:ServiceGetSpecialActiveNotificationsFuzzTest",
    "servicegetsubscribeInfo_fuzzer:ServiceGetSubscribeInfoFuzzTest",
    "servicesetringtoneinfobybundle_fuzzer:ServiceSetRingtoneInfoByBundleFuzzTest",
    "servicesetshowbadgeenabledforbundle_fuzzer:ServiceSetShowBadgeEnabledForBundleFuzzTest",
    "servicedisablenotificationfeature_fuzzer:ServiceDisableNotificationFeatureFuzzTest",
    "servicecancel_fuzzer:ServiceCancelFuzzTest",
    "servicereplydistributeoperation_fuzzer:ServiceReplyDistributeOperationFuzzTest",
    "servicesettargetdevicestatus_fuzzer:ServiceSetTargetDeviceStatusFuzzTest",
    "servicesetusergrantedbundlestate_fuzzer:ServiceSetUserGrantedBundleStateFuzzTest",
    "servicesetenabledforbundleslot_fuzzer:ServiceSetEnabledForBundleSlotFuzzTest",
    "servicesetgeofenceenabled_fuzzer:ServiceSetGeofenceEnabledFuzzTest",
    "serviceremovedonotdisturbprofiles_fuzzer:ServiceRemoveDoNotDisturbProfilesFuzzTest",
    "servicegetbundleimportance_fuzzer:ServiceGetBundleImportanceFuzzTest",
    "servicegetactivenotifications_fuzzer:ServiceGetActiveNotificationsFuzzTest",
    "servicesetnotificationsenabledforallbundles_fuzzer:ServiceSetNotificationsEnabledForAllBundlesFuzzTest",
    "servicecanpopenablenotificationdialog_fuzzer:ServiceCanPopEnableNotificationDialogFuzzTest",
    "servicecancelcontinuoustasknotification_fuzzer:ServiceCancelContinuousTaskNotificationFuzzTest",
    "servicegetdeviceremindtype_fuzzer:ServiceGetDeviceRemindTypeFuzzTest",
    "servicedelete_fuzzer:ServiceDeleteFuzzTest",
    "servicesetdistributedenabledbyslot_fuzzer:ServiceSetDistributedEnabledBySlotFuzzTest",
    "servicesetnotificationsenabledbyuser_fuzzer:ServiceSetNotificationsEnabledByUserFuzzTest",
    "servicedeletebybundle_fuzzer:ServiceDeleteByBundleFuzzTest",
    "servicegetallnotificationsbyslottype_fuzzer:ServiceGetAllNotificationsBySlotTypeFuzzTest",
    "servicegetallsubscriptionbundles_fuzzer:ServiceGetAllSubscriptionBundlesFuzzTest",
    "servicepublishasbundlewithmaxcapacity_fuzzer:ServicePublishAsBundleWithMaxCapacityFuzzTest",
  ]
}